# tracks

./: 404.html  README.md  cycletracks  data_polars.py  index.html  main.py  makeTestReport.py  mkdocs.yml  parseTestResults.py  pyproject.toml  pytest.ini  report-styles.css  requirements.txt  run-tracks  run_full_tests  run_tests  sitemap.xml  styles.css
cycleTracks/: __init__.py  addcycledata.py  conftest.py  customsort.py  cycleTracks.py  cycledata.py  cycledataviewer.py  cycleplotlabel.py  cycleplotwidget.py  cycletracks.py  plotitems.py  validate.py
cycleTracks/data/: __init__.py  addcycledata.py  adddatatablemixin.py  cycledata.py  cycledataanalysis.py  cycledataviewer.py  edititemdialog.py  personalbests.py  summary.py  summaryArgs.py
cycleTracks/plot/: __init__.py  custompyqtgraph.py  cycleplotlabel.py  cycleplotwidget.py  plottoolbar.py  statplot.py
cycleTracks/preferences/: __init__.py  datapref.py  plotpref.py  preferences.py
cycleTracks/test/: __init__.py  conftest.py  generateData.py  mockparent.py  test_cycletracks.py  test_preferences.py
cycleTracks/util/: __init__.py  convertfuncs.py  validate.py
docs/: index.md
reports/: makeTestReport.py  make_test_report.py  report-styles.css
search/: search_index.json
test/: generateData.py
tracks/: __init__.py  conftest.py  make_activity_config.py  tracks.py
tracks/activities/: __init__.py  activities.py  dtypes.py  manager.py  operations.py
tracks/data/: __init__.py  adddata.py  adddatatablemixin.py  data.py  dataviewer.py  edititemdialog.py  personalbests.py  summary.py
tracks/ui/: style.qss
(+41 files in other folders)
